--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(@project, html: {multipart: true}) do |f| %>
+  <%= render "shared/errors", object: @project %>
+
   <div>
     <%= f.label :title %>
     <%= f.text_field :title %>
