--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @user do |f| %>
+  <%= render "shared/errors", object: @user %>
   <div class="field">
      <%= f.label :first_name %><br />
      <%= f.text_field :first_name %>
