--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,9 @@
 <h1><%= @project.title %></h1>
 
-<p>By: <%= @project.user.first_name %> <%= @project.user.last_name  %></p>
+<% if @project.user %>
+  <p>By: <%= @project.user.first_name %> <%= @project.user.last_name  %></p>
+<% end %>
+
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
 <p>Raised so far: <%= number_to_currency(@project.pledges.sum(:dollar_amount)) %></p>
