--- a/app/views/projects/_reward_fields.html.erb
+++ b/app/views/projects/_reward_fields.html.erb
@@ -1,11 +1,16 @@
 <div>
-  <%= f.label :dollar_amount %>
-  <%= f.number_field :dollar_amount, step: 0.01 %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
 </div>
 
 <div>
   <%= f.label :description %>
   <%= f.text_field :description %>
+</div>
+
+<div>
+  <%= f.label :dollar_amount %>
+  <%= f.number_field :dollar_amount, step: 0.01 %>
 </div>
 
 <%= link_to_remove_association "remove reward", f %>
