--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,6 +17,7 @@
 
 <h2>Rewards</h2>
 <% @project.rewards.each do |reward| %>
+  <p><%= reward.title %></p>
   <p><%= number_to_currency(reward.dollar_amount) %></p>
   <p><%= reward.description %></p>
 
