Add carrierwave to upload photos to projects

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -23,6 +23,11 @@
   </div>
 
   <div>
+    <%= f.label :photo %>
+    <%= f.file_field :photo %>
+  </div>
+
+  <div>
     <%= f.label :start_date %>
     <%= f.datetime_select :start_date %>
   </div>
