--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,6 +3,7 @@
 <% if @project.user %>
   <p>By: <%= @project.user.first_name %> <%= @project.user.last_name  %></p>
 <% end %>
+<%= image_tag @project.photo.url.to_s %>
 
 <p><%= @project.description %></p>
 <p>Goal: <%= number_to_currency(@project.goal) %></p>
